--- a/ramzz.html
+++ b/ramzz.html
@@ -108,7 +108,7 @@
       <option value="" disabled selected>-- Pilih Domain --</option>
         <option value="indictive.my.id">indictive.my.id</option>
         <option value="cmmzx.my.id">cmmzx.my.id</option>
-        <option value="mypanelstore.web.id">mypanelstore.web.id</option>
+        <option value="ramzzstore.web.id">mypanelstore.web.id</option>
         <option value="privatserver.my.id">privatserver.my.id</option>
         <option value="serverku.biz.id">serverku.biz.id</option>
         <option value="trbruvrl.my.id">trbruvrl.my.id</option>
@@ -172,9 +172,9 @@
         zone_id: '2ce01e7dba82f7a6e8ab295f088b464e',
         token: 'jsBkhpoOeSprNzj6Rr7Zk12ZejR4jGzawrWd0hgu'
       },
-      'mypanelstore.web.id': {
-        zone_id: 'c61c442d70392500611499c5af816532',
-        token: 'gqg5B6_1UQhb72wg4zS1U7AGNbofMYRXT8zFiKZC'
+      'ramzzstore.web.id': {
+        zone_id: 'e01fb7df7bd1eb1af37e78e6a19e7229',
+        token: 'seOe1CK405WEYtISY54sy3xWabMQVP2fyx34c11_'
       },
       'privatserver.my.id': {
         zone_id: '699bb9eb65046a886399c91daacb1968',
