--- a/ramzz.html
+++ b/ramzz.html
@@ -108,7 +108,7 @@
       <option value="" disabled selected>-- Pilih Domain --</option>
         <option value="indictive.my.id">indictive.my.id</option>
         <option value="cmmzx.my.id">cmmzx.my.id</option>
-        <option value="ramzzstore.web.id">mypanelstore.web.id</option>
+        <option value="ramzzstore.web.id">ramzzstore.web.id</option>
         <option value="privatserver.my.id">privatserver.my.id</option>
         <option value="serverku.biz.id">serverku.biz.id</option>
         <option value="trbruvrl.my.id">trbruvrl.my.id</option>
